# statomata

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: publish.yaml  pull-request.yaml
examples/state_machines/: anyio_cases.py  condition_cases.py  defer_recall_cases.py  iterable_low_level.py  order_control.py  order_control_low_level.py  outcome_cases.py  positive_number_store.py  transition_cases.py
src/statomata/: abc.py  anyio.py  exception.py  executor.py  final.py  iterable.py  logging.py  sdk.py  subscriber.py  transition.py  unary.py
src/statomata/declarative/: __init__.py  builder.py  config.py  registry.py  state.py  state_machine.py
src/statomata/subscriber/: logging.py  registry.py
tests/integration/: conftest.py  test_anyio.py  test_condition.py  test_declarative.py  test_defer_recall.py  test_outcome.py  test_state_machine.py  test_subscriber.py
tests/stub/: order_control.py  order_control_machine.py  subscriber.py  traffic_light_machine.py
tests/stub/declarative/: order_control_machine.py  store.py  transitions.py
